prevent scrollbar from moving content

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,4 +20,6 @@ body,
 body {
   background: #121212;
   color: white;
+  width: calc(100vw - 34px);
+  padding-left: 34px;
 }
